<?xml version="1.0"?>
<package format="3">
  <name>nr5g_sierra_at</name>
  <version>0.5</version>
  <description>Package for 5G Sierra Wireless integration with ROS 2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <depend>rosidl_default_generators</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
