<?xml version="1.0"?>
<package format="3">
  <name>nr5g_sierra_at</name>
  <version>0.0.5</version>
  <description>Package for 5G Sierra Wireless integration with ROS 2</description>
  <maintainer email="emanuele.pagliari@ltu.se">Emanuele Pagliari</maintainer>
  <license file="LICENSE">BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
